Assignment2/lab1-testsuite-larger/lab1-test-dir/ParCPP.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParCPP.y
-----------------------------------------------------------------------------

state 43 contains 1 shift/reduce conflicts.
state 47 contains 1 shift/reduce conflicts.
state 48 contains 2 shift/reduce conflicts.
state 51 contains 1 shift/reduce conflicts.
state 149 contains 1 shift/reduce conflicts.
state 150 contains 1 shift/reduce conflicts.
state 210 contains 1 shift/reduce conflicts.
state 211 contains 1 shift/reduce conflicts.
state 231 contains 1 reduce/reduce conflicts.
state 247 contains 4 shift/reduce conflicts.
state 252 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pArg -> Arg                                 (3)
	%start_pListArg -> ListArg                         (4)
	%start_pStm -> Stm                                 (5)
	%start_pListStm -> ListStm                         (6)
	%start_pType -> Type                               (7)
	%start_pListType -> ListType                       (8)
	%start_pQConst -> QConst                           (9)
	%start_pName -> Name                               (10)
	%start_pListName -> ListName                       (11)
	%start_pExp16 -> Exp16                             (12)
	%start_pExp15 -> Exp15                             (13)
	%start_pExp14 -> Exp14                             (14)
	%start_pExp13 -> Exp13                             (15)
	%start_pExp12 -> Exp12                             (16)
	%start_pExp11 -> Exp11                             (17)
	%start_pExp10 -> Exp10                             (18)
	%start_pExp9 -> Exp9                               (19)
	%start_pExp8 -> Exp8                               (20)
	%start_pExp4 -> Exp4                               (21)
	%start_pExp3 -> Exp3                               (22)
	%start_pExp2 -> Exp2                               (23)
	%start_pExp1 -> Exp1                               (24)
	%start_pExp -> Exp                                 (25)
	%start_pExp5 -> Exp5                               (26)
	%start_pExp6 -> Exp6                               (27)
	%start_pExp7 -> Exp7                               (28)
	%start_pListExp -> ListExp                         (29)
	%start_pListExp2 -> ListExp2                       (30)
	%start_pListExp11 -> ListExp11                     (31)
	%start_pListId -> ListId                           (32)
	Integer -> L_integ                                 (33)
	Double -> L_doubl                                  (34)
	String -> L_quoted                                 (35)
	Char -> L_charac                                   (36)
	Id -> L_Id                                         (37)
	Program -> ListDef                                 (38)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (39)
	Def -> Type ListId ';'                             (40)
	Def -> 'using' QConst ';'                          (41)
	Def -> Type Id '(' ListType ')' ';'                (42)
	Def -> Type 'main' '(' ListArg ')' '{' ListStm '}'   (43)
	ListDef ->                                         (44)
	ListDef -> ListDef Def                             (45)
	Arg -> Type Id                                     (46)
	ListArg ->                                         (47)
	ListArg -> Arg                                     (48)
	ListArg -> Arg ',' ListArg                         (49)
	Stm -> Exp ';'                                     (50)
	Stm -> Type ListId ';'                             (51)
	Stm -> Type Id '=' Exp ';'                         (52)
	Stm -> 'return' Exp ';'                            (53)
	Stm -> 'return' ';'                                (54)
	Stm -> 'while' '(' Exp ')' Stm                     (55)
	Stm -> 'for' '(' Stm Exp ';' Exp ')' Stm           (56)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (57)
	Stm -> '{' ListStm '}'                             (58)
	Stm -> 'if' '(' Exp ')' Stm                        (59)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (60)
	Stm -> Type Id '(' ListArg ')' '{' Stm '}'         (61)
	ListStm ->                                         (62)
	ListStm -> ListStm Stm                             (63)
	Type -> 'int'                                      (64)
	Type -> 'bool'                                     (65)
	Type -> 'void'                                     (66)
	Type -> 'char'                                     (67)
	Type -> 'double'                                   (68)
	Type -> QConst                                     (69)
	Type -> 'const' Type                               (70)
	Type -> 'typedef' Type                             (71)
	Type -> Type '&'                                   (72)
	ListType ->                                        (73)
	ListType -> Type                                   (74)
	ListType -> Type ',' ListType                      (75)
	QConst -> ListName                                 (76)
	Name -> Id                                         (77)
	Name -> Id '<' ListType '>'                        (78)
	ListName -> Name                                   (79)
	ListName -> Name '::' ListName                     (80)
	Exp16 -> 'true'                                    (81)
	Exp16 -> 'false'                                   (82)
	Exp16 -> Integer                                   (83)
	Exp16 -> Double                                    (84)
	Exp16 -> String                                    (85)
	Exp16 -> Char                                      (86)
	Exp16 -> QConst                                    (87)
	Exp16 -> '(' Exp ')'                               (88)
	Exp15 -> Exp15 '[' Exp11 ']'                       (89)
	Exp15 -> Exp16 '(' ListExp2 ')'                    (90)
	Exp15 -> Exp16                                     (91)
	Exp14 -> Exp14 '.' Exp15                           (92)
	Exp14 -> Exp15 '++'                                (93)
	Exp14 -> Exp15 '--'                                (94)
	Exp14 -> '*' Exp15                                 (95)
	Exp14 -> Exp14 '->' Exp15                          (96)
	Exp14 -> Exp15                                     (97)
	Exp13 -> '++' Exp14                                (98)
	Exp13 -> '--' Exp14                                (99)
	Exp13 -> '!' Exp14                                 (100)
	Exp13 -> Exp14                                     (101)
	Exp12 -> Exp12 '*' Exp13                           (102)
	Exp12 -> Exp12 '/' Exp13                           (103)
	Exp12 -> Exp12 '%' Exp13                           (104)
	Exp12 -> Exp13                                     (105)
	Exp11 -> Exp11 '+' Exp12                           (106)
	Exp11 -> Exp11 '-' Exp12                           (107)
	Exp11 -> Exp12                                     (108)
	Exp10 -> Exp10 '<<' ListExp11                      (109)
	Exp10 -> Exp10 '>>' Exp11                          (110)
	Exp10 -> Exp11                                     (111)
	Exp9 -> Exp9 '<' Exp10                             (112)
	Exp9 -> Exp9 '>' Exp10                             (113)
	Exp9 -> Exp9 '<=' Exp10                            (114)
	Exp9 -> Exp9 '>=' Exp10                            (115)
	Exp9 -> Exp10                                      (116)
	Exp8 -> Exp8 '==' Exp9                             (117)
	Exp8 -> Exp8 '!=' Exp9                             (118)
	Exp8 -> Exp9                                       (119)
	Exp4 -> Exp4 '&&' Exp5                             (120)
	Exp4 -> Exp5                                       (121)
	Exp3 -> Exp3 '||' Exp4                             (122)
	Exp3 -> Exp4                                       (123)
	Exp2 -> Exp2 '=' Exp3                              (124)
	Exp2 -> Exp2 '+=' Exp3                             (125)
	Exp2 -> Exp2 '-=' Exp3                             (126)
	Exp2 -> Exp2 '?' Exp2 ':' Exp2                     (127)
	Exp2 -> Exp3                                       (128)
	Exp1 -> 'throw' Exp2                               (129)
	Exp1 -> Exp2                                       (130)
	Exp -> Exp1                                        (131)
	Exp5 -> Exp6                                       (132)
	Exp6 -> Exp7                                       (133)
	Exp7 -> Exp8                                       (134)
	ListExp ->                                         (135)
	ListExp -> Exp                                     (136)
	ListExp -> Exp ',' ListExp                         (137)
	ListExp2 ->                                        (138)
	ListExp2 -> Exp2                                   (139)
	ListExp2 -> Exp2 ',' ListExp2                      (140)
	ListExp11 ->                                       (141)
	ListExp11 -> ListExp11 Exp11                       (142)
	ListId -> Id                                       (143)
	ListId -> Id ',' ListId                            (144)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'char'         { PT _ (TS _ 34) }
	'const'        { PT _ (TS _ 35) }
	'do'           { PT _ (TS _ 36) }
	'double'       { PT _ (TS _ 37) }
	'else'         { PT _ (TS _ 38) }
	'false'        { PT _ (TS _ 39) }
	'for'          { PT _ (TS _ 40) }
	'if'           { PT _ (TS _ 41) }
	'int'          { PT _ (TS _ 42) }
	'main'         { PT _ (TS _ 43) }
	'return'       { PT _ (TS _ 44) }
	'throw'        { PT _ (TS _ 45) }
	'true'         { PT _ (TS _ 46) }
	'typedef'      { PT _ (TS _ 47) }
	'using'        { PT _ (TS _ 48) }
	'void'         { PT _ (TS _ 49) }
	'while'        { PT _ (TS _ 50) }
	'{'            { PT _ (TS _ 51) }
	'||'           { PT _ (TS _ 52) }
	'}'            { PT _ (TS _ 53) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_charac       { PT _ (TC $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pArg     rule  3
	%start_pListArg rule  4
	%start_pStm     rule  5
	%start_pListStm rule  6
	%start_pType    rule  7
	%start_pListType rule  8
	%start_pQConst  rule  9
	%start_pName    rule  10
	%start_pListName rule  11
	%start_pExp16   rule  12
	%start_pExp15   rule  13
	%start_pExp14   rule  14
	%start_pExp13   rule  15
	%start_pExp12   rule  16
	%start_pExp11   rule  17
	%start_pExp10   rule  18
	%start_pExp9    rule  19
	%start_pExp8    rule  20
	%start_pExp4    rule  21
	%start_pExp3    rule  22
	%start_pExp2    rule  23
	%start_pExp1    rule  24
	%start_pExp     rule  25
	%start_pExp5    rule  26
	%start_pExp6    rule  27
	%start_pExp7    rule  28
	%start_pListExp rule  29
	%start_pListExp2 rule  30
	%start_pListExp11 rule  31
	%start_pListId  rule  32
	Integer         rule  33
	Double          rule  34
	String          rule  35
	Char            rule  36
	Id              rule  37
	Program         rule  38
	Def             rules 39, 40, 41, 42, 43
	ListDef         rules 44, 45
	Arg             rule  46
	ListArg         rules 47, 48, 49
	Stm             rules 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61
	ListStm         rules 62, 63
	Type            rules 64, 65, 66, 67, 68, 69, 70, 71, 72
	ListType        rules 73, 74, 75
	QConst          rule  76
	Name            rules 77, 78
	ListName        rules 79, 80
	Exp16           rules 81, 82, 83, 84, 85, 86, 87, 88
	Exp15           rules 89, 90, 91
	Exp14           rules 92, 93, 94, 95, 96, 97
	Exp13           rules 98, 99, 100, 101
	Exp12           rules 102, 103, 104, 105
	Exp11           rules 106, 107, 108
	Exp10           rules 109, 110, 111
	Exp9            rules 112, 113, 114, 115, 116
	Exp8            rules 117, 118, 119
	Exp4            rules 120, 121
	Exp3            rules 122, 123
	Exp2            rules 124, 125, 126, 127, 128
	Exp1            rules 129, 130
	Exp             rule  131
	Exp5            rule  132
	Exp6            rule  133
	Exp7            rule  134
	ListExp         rules 135, 136, 137
	ListExp2        rules 138, 139, 140
	ListExp11       rules 141, 142
	ListId          rules 143, 144

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 44
	'char'         reduce using rule 44
	'const'        reduce using rule 44
	'double'       reduce using rule 44
	'int'          reduce using rule 44
	'typedef'      reduce using rule 44
	'using'        reduce using rule 44
	'void'         reduce using rule 44
	L_Id           reduce using rule 44
	%eof           reduce using rule 44

	Program        goto state 128
	ListDef        goto state 129

State 1


	'bool'         shift, and enter state 101
	'char'         shift, and enter state 102
	'const'        shift, and enter state 103
	'double'       shift, and enter state 104
	'int'          shift, and enter state 105
	'typedef'      shift, and enter state 106
	'using'        shift, and enter state 127
	'void'         shift, and enter state 107
	L_Id           shift, and enter state 37

	Id             goto state 43
	Def            goto state 125
	Type           goto state 126
	QConst         goto state 100
	Name           goto state 45
	ListName       goto state 46

State 2


	'bool'         reduce using rule 44
	'char'         reduce using rule 44
	'const'        reduce using rule 44
	'double'       reduce using rule 44
	'int'          reduce using rule 44
	'typedef'      reduce using rule 44
	'using'        reduce using rule 44
	'void'         reduce using rule 44
	L_Id           reduce using rule 44
	%eof           reduce using rule 44

	ListDef        goto state 124

State 3


	'bool'         shift, and enter state 101
	'char'         shift, and enter state 102
	'const'        shift, and enter state 103
	'double'       shift, and enter state 104
	'int'          shift, and enter state 105
	'typedef'      shift, and enter state 106
	'void'         shift, and enter state 107
	L_Id           shift, and enter state 37

	Id             goto state 43
	Arg            goto state 123
	Type           goto state 122
	QConst         goto state 100
	Name           goto state 45
	ListName       goto state 46

State 4


	'bool'         shift, and enter state 101
	'char'         shift, and enter state 102
	'const'        shift, and enter state 103
	'double'       shift, and enter state 104
	'int'          shift, and enter state 105
	'typedef'      shift, and enter state 106
	'void'         shift, and enter state 107
	L_Id           shift, and enter state 37
	%eof           reduce using rule 47

	Id             goto state 43
	Arg            goto state 120
	ListArg        goto state 121
	Type           goto state 122
	QConst         goto state 100
	Name           goto state 45
	ListName       goto state 46

State 5


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'bool'         shift, and enter state 101
	'char'         shift, and enter state 102
	'const'        shift, and enter state 103
	'do'           shift, and enter state 114
	'double'       shift, and enter state 104
	'false'        shift, and enter state 68
	'for'          shift, and enter state 115
	'if'           shift, and enter state 116
	'int'          shift, and enter state 105
	'return'       shift, and enter state 117
	'throw'        shift, and enter state 77
	'true'         shift, and enter state 69
	'typedef'      shift, and enter state 106
	'void'         shift, and enter state 107
	'while'        shift, and enter state 118
	'{'            shift, and enter state 119
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	Stm            goto state 110
	Type           goto state 111
	QConst         goto state 112
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 55
	Exp4           goto state 56
	Exp3           goto state 57
	Exp2           goto state 73
	Exp1           goto state 74
	Exp            goto state 113
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61

State 6


	'!'            reduce using rule 62
	'('            reduce using rule 62
	'*'            reduce using rule 62
	'++'           reduce using rule 62
	'--'           reduce using rule 62
	'bool'         reduce using rule 62
	'char'         reduce using rule 62
	'const'        reduce using rule 62
	'do'           reduce using rule 62
	'double'       reduce using rule 62
	'false'        reduce using rule 62
	'for'          reduce using rule 62
	'if'           reduce using rule 62
	'int'          reduce using rule 62
	'return'       reduce using rule 62
	'throw'        reduce using rule 62
	'true'         reduce using rule 62
	'typedef'      reduce using rule 62
	'void'         reduce using rule 62
	'while'        reduce using rule 62
	'{'            reduce using rule 62
	L_integ        reduce using rule 62
	L_doubl        reduce using rule 62
	L_quoted       reduce using rule 62
	L_charac       reduce using rule 62
	L_Id           reduce using rule 62
	%eof           reduce using rule 62

	ListStm        goto state 109

State 7


	'bool'         shift, and enter state 101
	'char'         shift, and enter state 102
	'const'        shift, and enter state 103
	'double'       shift, and enter state 104
	'int'          shift, and enter state 105
	'typedef'      shift, and enter state 106
	'void'         shift, and enter state 107
	L_Id           shift, and enter state 37

	Id             goto state 43
	Type           goto state 108
	QConst         goto state 100
	Name           goto state 45
	ListName       goto state 46

State 8


	'bool'         shift, and enter state 101
	'char'         shift, and enter state 102
	'const'        shift, and enter state 103
	'double'       shift, and enter state 104
	'int'          shift, and enter state 105
	'typedef'      shift, and enter state 106
	'void'         shift, and enter state 107
	L_Id           shift, and enter state 37
	%eof           reduce using rule 73

	Id             goto state 43
	Type           goto state 98
	ListType       goto state 99
	QConst         goto state 100
	Name           goto state 45
	ListName       goto state 46

State 9


	L_Id           shift, and enter state 37

	Id             goto state 43
	QConst         goto state 97
	Name           goto state 45
	ListName       goto state 46

State 10


	L_Id           shift, and enter state 37

	Id             goto state 43
	Name           goto state 96

State 11


	L_Id           shift, and enter state 37

	Id             goto state 43
	Name           goto state 45
	ListName       goto state 95

State 12


	'('            shift, and enter state 64
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 94

State 13


	'('            shift, and enter state 64
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 93

State 14


	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 92

State 15


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 91

State 16


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 90

State 17


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 89

State 18


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 88

State 19


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 87

State 20


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 86

State 21


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 55
	Exp4           goto state 85
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61

State 22


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 55
	Exp4           goto state 56
	Exp3           goto state 84
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61

State 23


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 55
	Exp4           goto state 56
	Exp3           goto state 57
	Exp2           goto state 83
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61

State 24


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'throw'        shift, and enter state 77
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 55
	Exp4           goto state 56
	Exp3           goto state 57
	Exp2           goto state 73
	Exp1           goto state 82
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61

State 25


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'throw'        shift, and enter state 77
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 55
	Exp4           goto state 56
	Exp3           goto state 57
	Exp2           goto state 73
	Exp1           goto state 74
	Exp            goto state 81
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61

State 26


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 55
	Exp5           goto state 80
	Exp6           goto state 60
	Exp7           goto state 61

State 27


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 55
	Exp6           goto state 79
	Exp7           goto state 61

State 28


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 55
	Exp7           goto state 78

State 29

